  free the result of history_get_history_state()).

- Issue #9450: Fix memory leak in readline.replace_history_item and
  readline.remove_history_item for readline version >= 5.0.

- Issue #8105: Validate file descriptor passed to mmap.mmap on Windows.

- Issue #8046: Add context manager protocol support and .closed property
  to mmap objects.

Library
-------

- Fix Issue8280 - urllib2's Request method will remove fragements in the url.
  This is how it is supposed to work, wget and curl do the same.  Previous
  behavior was wrong.

- Issue #6683: For SMTP logins we now try all authentication methods advertised
  by the server. Many servers are buggy and advertise authentication methods they
  o not support in reality.

- Issue #8814: function annotations (the ``__annotations__`` attribute)
  are now included in the set of attributes copied by default by
  functools.wraps and functools.update_wrapper.  Patch by Terrence Cole.

- Issue #2944: asyncore doesn't handle connection refused correctly.

- Issue #4184: Private attributes on smtpd.SMTPChannel made public and
  deprecate the private attributes. Add tests for smtpd module.

- Issue #3196: email header decoding is now forgiving if an RFC2047
  encoded word encoded in base64 is lacking padding.

- Issue #9444: Argparse now uses the first element of prefix_chars as
  the option character for the added 'h/help' option if prefix_chars
  does not contain a '-', instead of raising an error.

- Issue #7372: Fix pstats regression when stripping paths from profile
  data generated with the profile module.

- Issue #9428: Fix running scripts with the profile/cProfile modules from
  the command line.

- Issue #7781: Fix restricting stats by entry counts in the pstats
  interactive browser.

- Issue #9209: Do not crash in the pstats interactive browser on invalid
  regular expressions.

- Update collections.OrderedDict to match the implementation in Py2.7
  (based on lists instead of weakly referenced Link objects).
